<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="tip">Tip</string>
    <string name="default_bill_amoount">$0.00</string>
    <string name="default_tip_amount">$0.00</string>
    <string name="tip_option_1">10%</string>
    <string name="tip_option_2">15%</string>
    <string name="tip_option_3">20%</string>
    <string name="tv_TotalAmount">Total Amount</string>

</resources>
